[package]
name = "connect-four-server"
description = "Play connect four remotely."
version = "1.1.0"
edition = "2021"
authors = ["Grzegorz Łubian"]
publish = false

[dependencies]
# https & wss server
actix = "0.13"
actix-web = { version = "4.3", features = ["openssl"] }
actix-web-actors = "4.2"
url = { version = "2.3", features = ["serde"] }
qstring = "0.7"
openssl = { version = "0.10", features = ["v110"] }
tokio = "1"

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
toml = "0.7"

# logging
env_logger = "0.10"
log = "0.4"

# invite creation
uuid = { version = "1.3", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
] }
image = "0.23"
base64 = "0.21"
qrcode = "0.12"

# cli
pico-args = { version = "0.5", features = [
  "eq-separator",
  "short-space-opt",
  "combined-flags",
] }

# misc
rand = "0.8"
chrono = "0.4"
bytestring = "1.3"
